--- a/css/style.css
+++ b/css/style.css
@@ -3,47 +3,54 @@
     padding:0;
 }
 body{
-    background-color:rgb(139, 139, 139);
-}
+    background: rgb(111,119,117);
+    background: linear-gradient(90deg, rgba(111,119,117,1) 0%, rgba(206,212,218,1) 100%);
+} 
 .info-title {
     color:#FFF;
     padding:30px;
     display:flex;
     justify-content:center;
 }
+.info-title a {
+    text-decoration:none;
+    color:#FFF;
+}
+.info-title a:hover {
+    color:rgb(111,119,117);
+}
+main{
+    margin-top:4%;
+    margin-bottom:5%;
+}
 .container-links-pages {
+    width:70%;
     display:flex;
     flex-wrap:wrap;
     justify-content:center;
-    margin-top:40px;
+    margin:auto;
 }
 .container-footer {
-    background:#0c181c;
+    background:#1d3d33;
     color:white;
     padding:30px;
     display:flex;
     justify-content:center;
+    box-shadow: 0px -10px 22px -6px rgba(12,24,28,0.55);
+    -webkit-box-shadow: 0px -10px 22px -6px rgba(12,24,28,0.55);
+    -moz-box-shadow: 0px -10px 22px -6px rgba(12,24,28,0.55);
 }
 header {
-    position: relative;
-    width:95.6%;
+    box-shadow: 0px 12px 10px -6px rgba(29,61,51,0.76);
+    -webkit-box-shadow: 0px 12px 10px -6px rgba(29,61,51,0.76);
+    -moz-box-shadow: 0px 12px 10px -6px rgba(29,61,51,0.76);
     height:10vh;
-    overflow:hidden;
-    display:flex;
     justify-content:center;
     padding:50px;
-}
-header::before {
-    content:'';
-    position:absolute;
-    bottom:0;
-    left:50%;
-    width:100%;
-    height:100vh;
-    border-radius:50%;
-    transform-origin:bottom;
+    margin-bottom:3%;
     background-color:#0c181c;
-    transform:translateX(-50%) scale(4);
+    border-bottom-left-radius:40%;
+    border-bottom-right-radius:40%;
 }
 .content-title {
     position: relative;
@@ -53,30 +60,11 @@ header::before {
 }
 footer {
     margin-top:3%;
-    position: relative;
-    width:95.6%;
-    height:10vh;
-    overflow:hidden;
-    display:flex;
     justify-content:center;
     padding:50px;
-}
-footer::before {
-    content:'';
-    position:absolute;
-    bottom:0;
-    left:50%;
-    width:100%;
-    height:100vh;
-    border-radius:50%;
-    transform-origin:bottom;
-    background-color:#1d3d33;
-    transform:translateX(-25%) scale(4);
+    
 }
 .content-creator {
-    position: relative;
-    z-index:1;
-    max-width:100%;
     text-align:center;
 }
 .accounts {
