--- a/css/styleSections.css
+++ b/css/styleSections.css
@@ -3,14 +3,14 @@
     padding:0;
 }
 body{
-    background-color:rgb(139, 139, 139);
-    background-image:url(../images/back.svg);
+    background: rgb(111,119,117);
+background: linear-gradient(90deg, rgba(111,119,117,1) 0%, rgba(206,212,218,1) 100%);
 }
 .container-card {
     background-color:#1d3d33;
     width:450px;
     margin: 0 auto;
-    margin-top: 10%;
+    margin-top: 1%;
     height:50vh;
     border-radius:10px;
     color:#fff;
